--- a/03-Praxis/01-Modulo-Inicial/1.1-Aula-Inicial.ipynb
+++ b/03-Praxis/01-Modulo-Inicial/1.1-Aula-Inicial.ipynb
@@ -13,7 +13,7 @@
    "id": "b3870931",
    "metadata": {},
    "source": [
-    "https://youtu.be/p0m8S7lvZ6g"
+    "https://youtu.be/p0m8S7lvZ6g?si=dxaaJT00_fx4zWmO"
    ]
   },
   {
@@ -22,12 +22,13 @@
    "metadata": {},
    "source": [
     "##\n",
-    "- Albebrae Dedicata\n",
-    "    - Pedro Nunez - 1537\n",
+    "- Algebrae Dedicata\n",
+    "    - Shay - Pedro Nunez - 1567\n",
     "- Arithmeticae Dedicata\n",
-    "    -\n",
+    "    - Fractus - José Alpoim - 1744\n",
     "- Geometriae Dedicata\n",
-    "    - Manoel de Campos - 17"
+    "    - Radix - Manoel de Campos - 1735\n",
+    "    - Latus, Radix Q, Radix C"
    ]
   }
  ],
